--- a/home.css
+++ b/home.css
@@ -9,8 +9,6 @@ body {
   height: 400px;
   width: 99vw;
   margin: -8px 0px 0px -8px;
-  width: 99vw;
-  height: 300px;
   margin-left: -8px;
   display: inline-flex;
   justify-content: center;}
@@ -55,14 +53,13 @@ header {
   background-image: linear-gradient(to left, transparent 0%, #680f9f 120%), url(main/imagens/back.jpg);
   background-size: contain;
   background-repeat: repeat;
-  background-attachment: fixed;
   height: 400px;
   width: 99vw;
   margin: -8px 0px 0px -8px;
 }
 
 .itemserv {
-  margin: 30px;
+  margin: 75px;
   text-align: center;
   height: 260px;
   width: 250px;
@@ -151,7 +148,7 @@ header {
   background-image: url(main/imagens/back-carda.jpg);
   background-size: contain;
   background-attachment: none;
-  height: 400px;
+  height: 300px;
   width: 99vw;
   margin: -8px 0px 0px -8px;
 }
@@ -237,10 +234,10 @@ h2 {
 
 
 .card-carda {
-  margin: 30px;
+  margin: 25px;
   text-align: center;
   height: 260px;
-  width: 250px;
+  width: 230px;
   background-color: #efd005e0;
 }
 
@@ -248,8 +245,10 @@ h2 {
 footer {
   background-color: #333;
   color: #fff;
-  padding: 50px 0;
+  margin: 0px -4px -16px -4px;
+  width: 99vw;
 }
+
 
 footer h4 {
   font-size: 18px;
@@ -259,11 +258,8 @@ footer h4 {
   color: #fff;
 }
 
-footer p {
-  font-size: 14px;
-  line-height: 1.5;
-  margin-bottom: 20px;
-  color: #fff;
+footer hr {
+  width: 99vw;
 }
 
 footer ul {
@@ -288,8 +284,69 @@ footer a:hover {
   padding: 0;
   margin: 0;
   list-style: none;
+  display: grid;
 }
 
-.list-inline-item {
-  display: inline-block;
-  margin: 0
+#icon-foot {
+  width: 50px;
+}
+
+#logofoot {
+  width: 100px;
+}
+
+#col-quick {
+  width: 150px;
+  margin-left: 40px;
+}
+
+#cred {
+  text-align: center;
+}
+
+#cred > p {
+  margin: 5px;
+}
+
+.icon-foot {
+  display: inline-flex;
+}
+
+.icon-foot > img {
+  width: 35px;
+  margin-left: -14px;
+}
+
+.col-icon {
+  display: grid;
+  margin: 0px 0px 0px 15px;
+  font-size: 10px;
+}
+.col-icon > h4{
+  font-size: 18px;
+}
+.col-icon > p{
+  font-size: 10px;
+}
+
+.div-foot {
+  display: flex;
+  margin: 0px;
+}
+
+iframe {
+  width: 400px;
+  height: 250px;
+}
+
+.mapouter{
+  position: relative;
+  text-align: right;
+}
+
+.gmap_canvas{
+  overflow: hidden;
+  background: none!important;
+  height: 560px;
+  width: 100vw;
+}
