--- a/home.css
+++ b/home.css
@@ -1,27 +1,96 @@
-body {
-    background: linear-gradient(#efd005, #8004b2);
-  }
+@font-face {
+  font-family: 'titulo';
+  src: url('/assets/font/Oswald-VariableFont_wght.ttf');
+}
 
-.servcarda {
-  background-image: url(main/imagens/back-festa.jpg);
+body {
+  background-image: url(assets/imagens/back/back.jpg);
+  background-size: contain;
+  background-attachment: none;
+  height: 500px;
+  width: 99vw;
+  font-family: 'titulo';
+  font-weight: lighter;
+  font-style: normal;
+  text-decoration: none;
+  overflow-x: hidden;
+}
+
+header {
+  background-image: linear-gradient(to left, transparent 0%, #680f9f 120%), url(assets/imagens/back/back-head.jpg);
+  background-size: contain;
+  background-repeat: repeat;
+  height: 400px;
+  width: 99vw;
+  margin: -8px 0px 0px -8px;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+nav {
+  background-color: #b5e418;
+  margin: -10px;
+}
+
+.bar {
+  text-decoration: none;
+  float: right;
+  font-size: 1.3em;
+  margin: 10px 30px 10px 10px;
+  color: black;
+  transition: all 0.1s ease;
+}
+
+.bar:hover{
+  background-color: #8eb50c;
+  padding: 10px;
+  margin: 0px 20px 0px 0px;
+  transform: scale(1.1);
+  z-index: 1;
+}
+
+#logo {
+  height: 50px;
+  margin-left: 50px;
+}
+
+#videop {
+  margin: 150px auto;
+  display: block;
+}
+
+#videosec {
+  height: 600px;
+  background: linear-gradient(to top,rgba(203, 245, 157, 0), rgb(147, 250, 38), rgba(203, 245, 157, 0.41));
+}
+
+.serv {
+  background-image: url(assets/imagens/back/back-festa.jpg);
   background-size: contain;
   background-attachment: none;
   height: 400px;
   width: 99vw;
   margin: -8px 0px 0px -8px;
   margin-left: -8px;
+  margin-top: 100px;
   display: inline-flex;
-  justify-content: center;}
+  justify-content: center;
+}
+
+.itemserv {
+  margin: 75px;
+  text-align: center;
+  height: 260px;
+  width: 250px;
+  background-color: rgba(255, 255, 255, 0.865);
+}
 
 #serv1 > img{
   width: 100px;
   height: 100px;
-}
-
-.card {
-  border: 1px solid black;
-  width: 200px;
-  color: aliceblue;
 }
 #serv2 > img{
   width: 100px;
@@ -32,56 +101,160 @@ body {
   height: 100px;
 }
 
-nav {
-  background-color: #b5e418;
+.parce {
+  height: auto;
+  width: 99vw;
+  margin-left: -8px;
+  border: 0;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  margin-top: 100px;
+  text-align: center;
 }
 
-nav > a{
-  text-decoration: none;
-  float: right;
-  font-size: 1.3em;
-  margin: 15px 30px 10px 10px;
+#titparc {
+  background-color: #ffffff;
   color: black;
+  font-size: 3em;
+  margin-bottom: 50px;
+  margin-top: -60px;
 }
 
-#logo {
-  height: 50px;
-  margin-left: 50px;
+.body-card {
+  width: 200px;
+  height: 300px;
+  font-size: 15px;
+  display: inline-flex;
+  justify-content: center;
+  text-align: center;
+  margin: 10px;
+  padding: 20px;
+  box-shadow: 2px 2px 16px 0px rgba(0, 0, 0, 0.1);
+  border-radius: 15px;
+  transition: all 0.2s ease;
+  flex-direction: column;
+  background-color: white;
 }
 
-header {
-  background-image: linear-gradient(to left, transparent 0%, #680f9f 120%), url(main/imagens/back.jpg);
+.body-card > p {
+  margin: 0;
+}
+
+.body-card img {
+  width: 100%;
+  height: 200px;
+}
+
+.body-card:hover {
+  transform: scale(1.02);
+  z-index: 1;
+}
+
+
+
+.cardap {
   background-size: contain;
-  background-repeat: repeat;
+  background-attachment: none;
   height: 400px;
   width: 99vw;
-  margin: -8px 0px 0px -8px;
+  display: inline-flex;
+  justify-content: center;
 }
 
-.itemserv {
-  margin: 75px;
+#carda {
+  background-image: url(assets/imagens/back/back-carda.jpg);
+  background-size: contain;
+  background-attachment: none;
+  height: 300px;
+  width: 99vw;
+  margin: 0px 0px 0px -8px;
+}
+
+.card-button{
+  border: 1px solid blue;
+  border-radius: 5px;
+  padding: 3px 20px 7px 20px;
+  background-color: blue;
+  color: white;
+  z-index: 1;
+  transition: all 0.5s ease;
+  cursor: pointer;
+}
+
+.card-button > button{
+  border: none;
+  background-color: rgba(0, 0, 255, 0);
+  color: white;
+  cursor: pointer;
+}
+
+.card-button:hover {
+  background-color: white;
+}
+
+.card-button:hover > button {
+  color: blue;
+}
+
+
+
+.card-carda {
+  margin: 25px;
   text-align: center;
   height: 260px;
-  width: 250px;
-  background-color: rgba(255, 255, 255, 0.865);
+  width: 230px;
+  background-color: #efd005e0;
 }
-  
+
+.dep {
+  height: auto;
+  width: 99vw;
+  margin-left: -8px;
+  border: 0;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  margin-top: 100px;
+  text-align: center;
+}
+
+#titdep {
+  background-color: #ffffff;
+  color: black;
+  font-size: 3em;
+  margin-bottom: 10px;
+}
+
+.coment {
+  background-color: #3e089599;
+  width: 300px;
+  height: 75px;
+  margin: 20px;
+  color: white;
+  padding: 20px 20px 60px 20px;
+  font-size: 15px;
+  display: inline-flex;
+  justify-content: center;
+  text-align: left;
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.429);
+}
+
+.coment > p {
+  margin: 0;
+}
+
+.slider{
+  overflow: hidden;
+}
 
 .slides{
   width: 300%;
   height: 270px;
   display: flex;
+  margin-bottom: 150px;
 }
+
 .slides input{
   display: none;
-}
-.slide{
-  width: 350px;
-  position: relative;
-  transition: 1.5s;
-}
-.slide img{
-  width: auto;
 }
 
 #radio1:checked ~ .first{
@@ -115,138 +288,28 @@ header {
   margin-left: -47%;
 }
 
-#videosec {
-  height: 500px;
-  background: linear-gradient(to top, rgb(243, 243, 7), rgb(249, 249, 139));
+.slide{
+  width: 350px;
+  position: relative;
+  transition: 1.5s;
 }
-
-.slider{
-  overflow: hidden;
+.slide img{
+  width: auto;
 }
 
 .aaa {
-    background-color: #000000;
-    width: 200px;
-    height: 200px;
-    text-align: center;
-}
-
-.coment {
-  background-color: #3e089599;
-  width: 300px;
-  height: 75px;
-  margin: 20px;
-  color: white;
-  padding: 20px 20px 60px 20px;
-  font-size: 15px;
-  display: inline-flex;
-  justify-content: center;
-  text-align: left;
-}
-
-#carda {
-  background-image: url(main/imagens/back-carda.jpg);
-  background-size: contain;
-  background-attachment: none;
-  height: 300px;
-  width: 99vw;
-  margin: -8px 0px 0px -8px;
-}
-
-#videop {
-  margin: 70px auto;
-  display: block;
-}
-
-.coment > p {
-  margin: 0;
-}
-
-.dep {
-  height: auto;
-  width: 99vw;
-  margin-left: -8px;
-  border: 0;
-  margin-top: 100px;
-  margin-bottom: 100px;
+  background-color: #000000;
+  width: 200px;
+  height: 200px;
   text-align: center;
 }
-
-#titdep {
-  background-color: #114011;
-  color: white;
-}
-
-
-
-
-
-.secao4 {
-  margin: 0 auto;
-  font-family: Helvetica, sans-serif;
-  width: 1000px;
-}
-
-.secao4-div {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  padding: 10px;
-  text-align: center;
-}
-
-.secao4-div-card {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: calc(100% / 4 - 60px);
-  margin: 10px;
-  padding: 20px;
-  box-shadow: 2px 2px 16px 0px rgba(0, 0, 0, 0.1);
-  border-radius: 15px;
-  background-color: white;
-  transition: all 0.5s ease;
-}
-
-.secao4-div-card:hover {
-  transform: scale(1.1);
-  z-index: 1;
-}
-h2 {
-  text-align: center;
-}
-
-.secao4-div-card img {
-  width: 100%;
-  height: 180px;
-}
-
-.secao4-div-card h3 {
-  margin-bottom: 0px;
-}
-.card-button{
-  border: none;
-  border-radius: 5px;
-  padding: 10px 20px;
-  background-color: blue;
-  color: white;
-}
-
-
-.card-carda {
-  margin: 25px;
-  text-align: center;
-  height: 260px;
-  width: 230px;
-  background-color: #efd005e0;
-}
-
 
 footer {
   background-color: #333;
   color: #fff;
-  margin: 0px -4px -16px -4px;
+  margin: 0px -4px -16px -8px;
   width: 99vw;
+  padding: 20px 20px 0px 0px;
 }
 
 
@@ -280,6 +343,15 @@ footer a:hover {
   color: #ccc;
 }
 
+.col-logo {
+  margin-left: 40px;
+  margin-top: 40px;
+}
+
+.col-logo > p {
+  width: 300px;
+}
+
 .list-inline {
   padding: 0;
   margin: 0;
@@ -287,17 +359,14 @@ footer a:hover {
   display: grid;
 }
 
-#icon-foot {
-  width: 50px;
-}
-
 #logofoot {
   width: 100px;
 }
 
 #col-quick {
-  width: 150px;
-  margin-left: 40px;
+  width: 200px;
+  margin-left: 70px;
+  margin-right: 0px;
 }
 
 #cred {
@@ -310,20 +379,26 @@ footer a:hover {
 
 .icon-foot {
   display: inline-flex;
+  margin-bottom: 10px;
+}
+
+.icon-foot > a {
+  width: 130px;
 }
 
 .icon-foot > img {
-  width: 35px;
+  width: 50px;
   margin-left: -14px;
 }
 
 .col-icon {
   display: grid;
-  margin: 0px 0px 0px 15px;
+  margin-left: 70px;
   font-size: 10px;
 }
 .col-icon > h4{
   font-size: 18px;
+  margin-top: 24px;
 }
 .col-icon > p{
   font-size: 10px;
@@ -335,8 +410,9 @@ footer a:hover {
 }
 
 iframe {
-  width: 400px;
-  height: 250px;
+  width: 500px;
+  height: 290px;
+  margin-top: 10px;
 }
 
 .mapouter{
