--- a/home.css
+++ b/home.css
@@ -1,6 +1,12 @@
+@import url("https://fonts.googleapis.com/css?family=Barlow:200,300,400,500,600,700,800,900&display=swap");
 @font-face {
   font-family: 'titulo';
   src: url('/assets/font/Oswald-VariableFont_wght.ttf');
+}
+
+@font-face {
+  font-family: 'podio';
+  src: url('/assets/font/BebasNeue-Regular.ttf');
 }
 
 body {
@@ -50,21 +56,384 @@ nav {
   margin: 0px 20px 0px 0px;
   transform: scale(1.1);
   z-index: 1;
+}  
+@media (min-width: 901px) {
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+#burguer {
+  display: none;
+}
+
+
+
+
+
+
+
+
+
+
+@media (max-width: 900px) {
+  #logob {
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+    align-items: center;
+  }
+  #burguer {
+    display: block;
+    margin: 0;
+  }
+  #linha{
+    display: none;
+  }
+/*
+$bg-01: #364e68;
+$bg-02: #446d8c;
+$bg-03: #5788a0;
+$bg-04: #73a5b5;
+*/
+body {
+  margin: 0;
+  font-family: "Barlow", sans-serif;
+  -webkit-tap-highlight-color: transparent;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+ul li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+.menu {
+  display: none;
+}
+
+.menubar {
+  width: 100%;
+  height: 60px;
+  padding: 0 20px;
+  position: absolute;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  box-sizing: border-box;
+  box-shadow: 0px 0px 20px -10px rgba(0, 0, 0, 0.3);
+  background-color: #b5e418;
+}
+.menubar .home {
+  font-size: 20px;
+  font-weight: 600;
+  color: #c05c7e;
+  transition: all 0.4s ease;
+}
+.menubar .home:hover {
+  opacity: 0.5;
+}
+.menubar .icons .icon-menu {
+  display: flex;
+  width: 30px;
+  height: 30px;
+  z-index: 2;
+  position: relative;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+.menubar .icons .icon-menu span {
+  background-color: #c05c7e;
+  width: 30px;
+  height: 3px;
+  position: absolute;
+  display: flex;
+  justify-content: flex-end;
+  transition: all 0.2s ease;
+  right: 0;
+  border-radius: 5px;
+}
+.menubar .icons .icon-menu span:before, .menubar .icons .icon-menu span:after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-color: #c05c7e;
+  border-radius: 5px;
+}
+.menubar .icons .icon-menu span:before {
+  transform: translateY(-10px);
+  transition: all 0.3s 0.1s ease;
+}
+.menubar .icons .icon-menu span:after {
+  transform: translateY(10px);
+  transition: all 0.3s 0.2s ease;
+}
+.menubar .icons .icon-menu.icon-closed span {
+  justify-content: center;
+  width: 0px;
+  right: initial;
+  opacity: 0.5;
+  transition: all 0.6s ease;
+}
+.menubar .icons .icon-menu.icon-closed span:before, .menubar .icons .icon-menu.icon-closed span:after {
+  width: 30px;
+  background-color: white;
+}
+.menubar .icons .icon-menu.icon-closed span:before {
+  transform: rotate(45deg);
+}
+.menubar .icons .icon-menu.icon-closed span:after {
+  transform: rotate(-45deg);
+}
+.menu.open {
+  display: flex;
+}
+.menu.open .menu-link {
+  justify-content: center;
+  align-items: center;
+}
+.menu.open .menu-link:nth-child(1) {
+  background-color: #794D8C;
+  animation-duration: 0.6s;
+}
+.menu.open .menu-link:nth-child(2) {
+  background-color: #c05c7e;
+  animation-duration: 0.8s;
+}
+.menu.open .menu-link:nth-child(3) {
+  background-color: #54BF8D;
+  animation-duration: 1s;
+}
+.menu.open .menu-link:nth-child(4) {
+  background-color: #F2E416;
+  animation-duration: 1.2s;
+}
+.menu.open .menu-link:nth-child(5) {
+  background-color: #F2CE1B;
+  animation-duration: 1.2s;
+}
+.menu.open .menu-link:nth-child(6) {
+  background-color: #D94423;
+  animation-duration: 1.2s;
+}
+.menu.open .menu-link:nth-child(7) {
+  background-color: #0099ff;
+  animation-duration: 1.2s;
+}
+.menu.open .menu-link .text-item {
+  text-transform: uppercase;
+  font-weight: 800;
+  font-size: 40px;
+  opacity: 0.5;
+  letter-spacing: 5px;
+  transition: all 0.4s 0.2s ease-in-out, letter-spacing 0.2s ease-in, opacity 0.2s ease-in;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation: text-in 0.6s ease;
+  position: absolute;
+}
+.menu.open .menu-link .text-item {
+    font-size: 30px;
+  }
+.menu.open .menu-link .text-item .icon {
+  margin-top: -20px;
+  position: absolute;
+  display: flex;
+  width: 30px;
+  height: 30px;
+  opacity: 0;
+  transform: translateY(0px);
+  transition: all 0.4s ease-in-out;
+  background-image: url("https://rafaelavlucas.github.io/assets/icons/white/icon-54.svg");
+}
+.menu.open .menu-link .text-item .icon {
+    opacity: 15;
+    transform: translateY(40px);
+  }
+
+.menubar .icons .icon-menu:hover span {
+  width: 30px;
+}
+.menubar .icons .icon-menu:hover span:before {
+  width: 25px;
+}
+.menubar .icons .icon-menu:hover span:after {
+  width: 20px;
+}
+
+.menu.open .menu-link .submenu {
+  margin-top: 100px;
+  margin-left: 18px;
+}
+.menu.open .menu-link .submenu .sub-item {
+  display: none;
+  margin: 10px 0;
+  color: white;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-size: 20px;
+  font-weight: 600;
+  position: relative;
+  width: fit-content;
+  cursor: pointer;
+  padding: 5px 15px;
+}
+.menu.open .menu-link .submenu .sub-item {
+  font-size: 16px;
+  }
+.menu.open .menu-link .submenu .sub-item:after {
+  content: "";
+  height: 0%;
+  width: 3px;
+  background-color: white;
+  opacity: 0.3;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: height 0.4s 0.3s ease, width 0.4s ease;
+}
+.menu.open .menu-link .submenu .sub-item:hover:after {
+  width: 100%;
+  height: 100%;
+  transition: height 0.4s ease, width 0.4s 0.3s ease;
+}
+.menu.open .menu-link:hover .text-item {
+  font-size: 30px;
+  opacity: 1;
+  letter-spacing: 10px;
+}
+
+.menu.open .menu-link:hover.active {
+    height: 80vh;
+  }
+.menu.open .menu-link:hover.active .text-item {
+    height: 20%;
+    transform: translateY(-180%);
+  }
+.menu.open .menu-link:hover.active .submenu {
+  transform: translateY(0);
+  z-index: 1;
+  opacity: 1;
+}
+.menu.open .menu-link:hover.active .submenu {
+    height: 70%;
+  }
+.menu.open .menu-link:hover.active .submenu .sub-item {
+  display: flex;
+  animation: submenu 1s ease forwards;
+  z-index: 2;
+}
+@keyframes submenu {
+  0% {
+    transform: translatex(50px) rotate(5-deg);
+    opacity: 0;
+  }
+  50% {
+    transform: translatex(50px) rotate(-5deg);
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+    transform: translatex(0px) rotate(0deg);
+  }
+}
+.menu.open .menu-link:hover.active .submenu .sub-item:nth-child(1) {
+  animation-duration: 1s;
+}
+.menu.open .menu-link:hover.active .submenu .sub-item:nth-child(2) {
+  animation-duration: 1.2s;
+}
+.menu.open .menu-link:hover.active .submenu .sub-item:nth-child(3) {
+  animation-duration: 1.4s;
+}
+.menu.open .menu-link {
+    width: 100%;
+    height: 25%;
+    display: flex;
+    margin: 0 auto;
+    animation: menu-mobile 0.6s ease forwards;
+    transform: translatey(0%);
+    right: 0;
+  }
+  @keyframes menu-mobile {
+    0% {
+      transform: translateX(200%);
+    }
+    100% {
+      transform: translateX(0%);
+    }
+  }
+.menu.open .menu-link:hover {
+    width: 100%;
+  }
+.menu.open {
+    height: 100vh;
+    flex-direction: column;
+  }
+  
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 #logo {
   height: 50px;
   margin-left: 50px;
 }
 
+#videomain {
+  margin-left: -8px;
+}
+
 #videop {
-  margin: 150px auto;
   display: block;
+  margin-left: 0px;
 }
 
 #videosec {
-  height: 600px;
-  background: linear-gradient(to top,rgba(203, 245, 157, 0), rgb(147, 250, 38), rgba(203, 245, 157, 0.41));
+  height: 70vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(205, 250, 156);  
+}
+
+#degradvideop {
+  background: linear-gradient(to bottom, rgb(205, 250, 156), rgba(203, 245, 157, 0) 100%);
+}
+
+#degradvideop > p {
+  margin: 0;
+  visibility: hidden;
 }
 
 .serv {
@@ -87,37 +456,84 @@ nav {
   width: 250px;
   background-color: rgba(255, 255, 255, 0.865);
 }
-
-#serv1 > img{
-  width: 100px;
-  height: 100px;
-}
-#serv2 > img{
-  width: 100px;
-  height: 100px;
-}
-#serv3 > img{
-  width: 100px;
-  height: 100px;
+.itemserv > a {
+  color: black;
 }
 
-.parce {
-  height: auto;
-  width: 99vw;
-  margin-left: -8px;
-  border: 0;
-  margin-top: 100px;
-  margin-bottom: 100px;
-  margin-top: 100px;
-  text-align: center;
+@media (max-width:500px) {
+  .serv {
+    height: 70%;
+    margin: -8px 0px 0px -8px;
+    align-items: center;
+  }
+  
+  .itemserv {
+    margin: 15px;
+    height: 200px;
+    font-size: 10px;
+  }
 }
+
+@media (min-width: 500px) and (max-width: 700px) {
+  .serv {
+    height: 40vh;
+    margin-left: -8px;
+    align-items: center;
+  }
+  
+  .itemserv {
+    margin: 30px;
+    height: 250px;
+    width: 250px;
+    font-size: 12px;
+  }
+}
+
+#serv1 > a > img{
+  width: 100px;
+  height: 100px;
+}
+#serv2 > a > img{
+  width: 100px;
+  height: 100px;
+}
+#serv3 > a > img{
+  width: 100px;
+  height: 100px;
+}
+
+#parcee {
+  width: 100vw;
+    margin: 0 auto;
+    border: 0;
+    margin-top: 20px;
+    margin-bottom: 100px;
+    text-align: center;
+    visibility: hidden;
+}
+
+#parcee > * {
+  visibility: visible;
+  transition: opacity 200ms;
+}
+
+#parcee:hover > :not(:hover) {
+  opacity: 0.75;
+}
+
 
 #titparc {
   background-color: #ffffff;
   color: black;
   font-size: 3em;
-  margin-bottom: 50px;
-  margin-top: -60px;
+  text-align: center;
+  margin-top: 100px;
+  margin-bottom: 0px;
+  visibility: visible;
+  background-image: -webkit-linear-gradient(90deg, black 0%, gray 80%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-animation: hue 60s infinite linear;
 }
 
 .body-card {
@@ -150,26 +566,6 @@ nav {
   z-index: 1;
 }
 
-
-
-.cardap {
-  background-size: contain;
-  background-attachment: none;
-  height: 400px;
-  width: 99vw;
-  display: inline-flex;
-  justify-content: center;
-}
-
-#carda {
-  background-image: url(assets/imagens/back/back-carda.jpg);
-  background-size: contain;
-  background-attachment: none;
-  height: 300px;
-  width: 99vw;
-  margin: 0px 0px 0px -8px;
-}
-
 .card-button{
   border: 1px solid blue;
   border-radius: 5px;
@@ -196,14 +592,102 @@ nav {
   color: blue;
 }
 
+@media (max-width: 600px) {
+  .body-card {
+    width: 30%;
+    height: 250px;
+    font-size: 15px;
+    margin: 10px;
+    padding: 20px;
+  }
 
+  .body-card img {
+    width: 100%;
+    height: 1500px;
+  }
+  .card-button{
+    border: 1px solid blue;
+    padding: 3px ;
+    background-color: blue;
+    color: white;
+    z-index: 1;
+    transition: all 0.5s ease;
+    cursor: pointer;
+  }
+}
 
-.card-carda {
+#carda {
+  background-image: url(assets/imagens/back/back-carda.jpg);
+  background-size: contain;
+  background-attachment: none;
+  height: 300px;
+  width: 99vw;
+  margin: 0px 0px 0px -8px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow:
+  0px 10px 30px 0px #ddbe0c71,
+  0px -10px 30px 0px #ddbe0c71;
+}
+
+.card-body {
   margin: 25px;
   text-align: center;
   height: 260px;
   width: 230px;
   background-color: #efd005e0;
+}
+
+.card-body > a {
+  color: black;
+}
+
+.carda-img {
+  width: 100px;
+  height: 100px;
+}
+
+@media (max-width: 800px) {
+  #carda {
+    height: 250px;
+  }
+  
+  .card-body {
+    margin: 15px;
+    height: 200px;
+    width: 150px;
+  }
+
+  .carda-img {
+    width: 80px;
+    height: 80px;
+  }
+  
+  .card-title {
+    margin: 0;
+  }
+  
+  .card-text {
+    font-size: 10px;
+  }
+}
+
+@media (min-width: 0px) and (max-width: 300px) {
+  #carda {
+    height: 250px;
+  }
+  
+  .card-body {
+    margin: 5px;
+    height: 200px;
+    width: 150px;
+  }
+
+  .carda-img {
+    width: 50px;
+    height: 50px;
+  }
 }
 
 .dep {
@@ -219,9 +703,14 @@ nav {
 
 #titdep {
   background-color: #ffffff;
-  color: black;
+  text-align: center;
+  margin-bottom: 30px;
   font-size: 3em;
-  margin-bottom: 10px;
+  color: black;
+  background-image: -webkit-linear-gradient(90deg, #410765 0%, #9f27c7 80%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-animation: hue 60s infinite linear;
 }
 
 .coment {
@@ -242,8 +731,47 @@ nav {
   margin: 0;
 }
 
+@media (max-width: 550px) {
+  .dep {
+    margin: 40px 0px 60px 0px;
+  }
+  .coment {
+    width: 100px;
+    height: 40px;
+    margin: 10px;
+    padding: 10px 10px 60px 10px;
+  }
+  .coment p {
+    font-size: 7.5px;
+  }
+  #c7, #c8, #c9, #c10, #c11, #c12 {
+    display: none;
+  }
+}
+
+@media (min-width: 550px) and (max-width: 850px) {
+  .coment {
+    width: 200px;
+    height: 55px;
+    margin: 10px;
+  }
+  .coment p {
+    font-size: 12px;
+  }
+  #c9, #c10, #c11, #c12 {
+    display: none;
+  }
+}
+
+#h2-sli {
+  text-align: center;
+  margin-bottom: 50px;
+}
+
 .slider{
   overflow: hidden;
+  margin-left: 100px;
+  margin-right: 100px;
 }
 
 .slides{
@@ -261,31 +789,31 @@ nav {
   margin-left: 0;
 }
 #radio2:checked ~ .first{
-  margin-left: -7%;
+  margin-left: 0;
 }
 #radio3:checked ~ .first{
-  margin-left: -12%;
+  margin-left: -9%;
 }
 #radio4:checked ~ .first{
-  margin-left: -17%;
+  margin-left: -18%;
 }
 #radio5:checked ~ .first{
-  margin-left: -22%;
-}
-#radio6:checked ~ .first{
   margin-left: -27%;
 }
+#radio6:checked ~ .first{
+  margin-left: -36%;
+}
 #radio7:checked ~ .first{
-  margin-left: -32%;
+  margin-left: -45%;
 }
 #radio8:checked ~ .first{
-  margin-left: -37%;
+  margin-left: -54%;
 }
 #radio9:checked ~ .first{
-  margin-left: -42%;
+  margin-left: -68%;
 }
 #radio10:checked ~ .first{
-  margin-left: -47%;
+  margin-left: -68%;
 }
 
 .slide{
@@ -298,11 +826,163 @@ nav {
 }
 
 .aaa {
-  background-color: #000000;
   width: 200px;
   height: 200px;
   text-align: center;
+  position: relative;
 }
+
+.aaa > img {
+  clip-path: circle(50%);
+}
+
+.text-img{
+  display: none;
+}
+
+.aaa:hover .text-img{
+  font-family: 'podio', Arial, Helvetica, sans-serif;
+  position: absolute;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+  background-color: rgba(0, 0, 0, 0.744);
+  font-size: 3em;
+  clip-path: circle(50%);
+}
+
+@media (max-width: 800px) {
+  .slider{
+    margin: 0 60px;
+  }
+  
+  .slides{
+    width: 650px;
+    height: 270px;
+    display: flex;
+    margin-bottom: 150px;
+  }
+  
+  .slides input{
+    display: none;
+  }
+  
+  #radio1:checked ~ .first{
+    margin-left: 0;
+  }
+  #radio2:checked ~ .first{
+    margin-left: 0;
+  }
+  #radio3:checked ~ .first{
+    margin-left: -24%;
+  }
+  #radio4:checked ~ .first{
+    margin-left: -48%;
+  }
+  #radio5:checked ~ .first{
+    margin-left: -72%;
+  }
+  #radio6:checked ~ .first{
+    margin-left: -96%;
+  }
+  #radio7:checked ~ .first{
+    margin-left: -120%;
+  }
+  #radio8:checked ~ .first{
+    margin-left: -144%;
+  }
+  #radio9:checked ~ .first{
+    margin-left: -144%;
+  }
+  #radio10:checked ~ .first{
+    margin-left: -144%;
+  }
+  
+  .slide{
+    margin: 20px;
+    position: relative;
+    transition: 1.5s;
+  }
+  .slide img{
+    width: 120px;
+  }
+  
+  .aaa {
+    width: 120px;
+    height: 120px;
+  }
+  
+  .aaa:hover .text-img{
+    font-size: 2em;
+  }
+}
+
+@media (min-width: 0px) and (max-width: 500px) {
+  .slider{
+    margin: 0 40px;
+    width: 300px;
+    overflow: hidden;
+  }
+  
+  .slides{
+    height: 270px;
+    display: flex;
+    margin-bottom: 0px;
+  }
+  
+  #radio1:checked ~ .first{
+    margin-left: 0;
+  }
+  #radio2:checked ~ .first{
+    margin-left: 0;
+  }
+  #radio3:checked ~ .first{
+    margin-left: -31%;
+  }
+  #radio4:checked ~ .first{
+    margin-left: -62%;
+  }
+  #radio5:checked ~ .first{
+    margin-left: -93%;
+  }
+  #radio6:checked ~ .first{
+    margin-left: -124%;
+  }
+  #radio7:checked ~ .first{
+    margin-left: -155%;
+  }
+  #radio8:checked ~ .first{
+    margin-left: -186%;
+  }
+  #radio9:checked ~ .first{
+    margin-left: -186%;
+  }
+  #radio10:checked ~ .first{
+    margin-left: -186%;
+  }
+  
+  .slide{
+    margin: 20px;
+    position: relative;
+    transition: 1.5s;
+  }
+  .slide img{
+    width: 80px;
+  }
+  
+  .aaa {
+    width: 80px;
+    height: 80px;
+  }
+}
+
 
 footer {
   background-color: #333;
@@ -346,10 +1026,13 @@ footer a:hover {
 .col-logo {
   margin-left: 40px;
   margin-top: 40px;
+  padding-right: 20px;
+  width: 20%;
 }
 
 .col-logo > p {
-  width: 300px;
+  width: 90%;
+  font-size: 85%;
 }
 
 .list-inline {
@@ -393,8 +1076,8 @@ footer a:hover {
 
 .col-icon {
   display: grid;
-  margin-left: 70px;
   font-size: 10px;
+  height: 30vh;
 }
 .col-icon > h4{
   font-size: 18px;
@@ -426,3 +1109,188 @@ iframe {
   height: 560px;
   width: 100vw;
 }
+
+@media (max-width: 1050px) {
+  #titparc {margin-top: 40px;}
+  footer {
+    background-color: #333;
+    color: #fff;
+    margin: 0px -4px -16px -8px;
+    padding: 20px 20px 0px 0px;
+  }
+  
+  
+  footer h4 {
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 20px;
+    text-transform: uppercase;
+    color: #fff;
+  }
+  
+  footer hr {
+    width: 99vw;
+  }
+
+  footer li {
+  width: 40px;
+  }
+  
+  .col-logo {
+    margin-left: 30px;
+    width: auto;
+    margin-top: 10px;
+    grid-area: col-log;
+  }
+  
+  .col-logo > p {
+    font-size: 100%;
+    overflow: hidden;
+    width: auto;
+  }
+  
+  .list-inline {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    display: grid;
+  }
+  
+  #logofoot {
+    width: 100px;
+  }
+  
+  #col-quick {
+    width: 200px;
+    margin-left: 0;
+    margin-right: 0px;
+    grid-area: col-quic;
+  }
+  
+  #cred {
+    text-align: center;
+  }
+  
+  #cred > p {
+    margin: 5px;
+  }
+  
+  .icon-foot {
+    display: inline-flex;
+    margin: 15px;
+  }
+  
+  .icon-foot > a {
+    width: 130px;
+  }
+  
+  .icon-foot > img {
+    width: 50px;
+    margin-left: -14px;
+  }
+  
+  .col-icon {
+    height: 30vh;
+    grid-area: col-ico;
+  }
+  .col-icon > h4{
+    font-size: 18px;
+    margin-top: 24px;
+  }
+  .col-icon > p{
+    font-size: 10px;
+  }
+  
+  .div-foot {
+    display: grid;
+    grid-template-areas: 
+      'col-log col-ico col-quic'
+      'iframe iframe iframe';
+      grid-template-columns: 33.3vw 33.3vw 20vw 100%;
+    margin: 0px;
+  }
+
+  #di-iframe {
+    width: 100%;
+    grid-area: iframe;
+    display: grid;
+    justify-content: center;
+  }
+  
+  iframe {
+    display: grid;
+    height: 250px;
+    margin-top: 10px;
+    margin-right: 0px;
+  }
+  
+}
+
+@media (max-width: 550px) {
+  .icon-foot > img {
+    margin-left: 0px;
+    justify-content: start;
+    float: left;
+  }
+  .icon-foot {
+    margin-left: 0px;
+    width: auto;
+  }
+  .col-icon {
+    height: auto;
+  }
+  .col-logo {
+    margin-left: 0px;
+  }
+  .col-logo > p {
+    margin-left: 15px;
+  }
+
+  .div-foot {
+    display: grid;
+    grid-template-areas: 
+      'col-log col-ico'
+      'col-quic col-quic'
+      'iframe iframe';
+      grid-template-columns: 50% 50%;
+    margin: 0px;
+  }
+  #di-iframe {
+    grid-area: iframe;
+    display: grid;
+    justify-content: center;
+  }
+  
+  iframe {
+    width: auto;
+    display: grid;
+    height: 250px;
+    margin-top: 10px;
+    margin-right: 0px;
+  }
+  .list-unstyled li{
+    margin: 5px;
+    width: 25%;
+    padding: 10px;
+    height: 25px;
+    align-items: center;
+    font-size: 20px;
+  }
+  .list-unstyled{
+    align-items: center;
+    width: 100vw;
+    display: flex;
+    height: 50px;
+    }
+    .ul1 {
+      margin-bottom: 40px;
+    }
+    .ul2 {
+      margin-bottom: 20px;
+    }
+    #col-quick {
+      width: 100vw;
+      text-align: center;
+    }
+}
+
