--- a/sobre.css
+++ b/sobre.css
@@ -1,8 +1,59 @@
+@font-face {
+  font-family: 'titulo';
+  src: url('/assets/font/Oswald-VariableFont_wght.ttf');
+}
+
+body {
+  background-image: url(assets/imagens/back/back.jpg);
+  background-size: contain;
+  background-attachment: none;
+  height: 500px;
+  width: 99vw;
+  font-family: 'titulo';
+  font-weight: lighter;
+  font-style: normal;
+  text-decoration: none;
+  overflow-x: hidden;
+  margin: 0;
+}
+
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+nav {
+  background-color: #b5e418;
+}
+
+.bar {
+  text-decoration: none;
+  float: right;
+  font-size: 1.3em;
+  margin: 10px 30px 10px 10px;
+  color: black;
+  transition: all 0.2s ease;
+}
+
+.bar:hover{
+  background-color: #8eb50c;
+  padding: 10.8px;
+  margin: 0px 20px 0px 0px;
+  transform: scale(1.1);
+  z-index: 1;
+}
+
+#logo {
+  height: 50px;
+  margin-left: 50px;
+}
+
 .comeco {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgb(204, 255, 255);
+    background-color: rgb(214, 249, 249);
     height: 46vw;
 }
 
@@ -89,4 +140,126 @@
     color: purple;
     font-size: 2em;
   }
-  
+
+footer {
+  background-color: #333;
+  color: #fff;
+  margin: 0px -4px -16px -8px;
+  width: 99vw;
+  padding: 20px 20px 0px 0px;
+}
+
+
+footer h4 {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 20px;
+  text-transform: uppercase;
+  color: #fff;
+}
+
+footer hr {
+  width: 99vw;
+}
+
+footer ul {
+  list-style: none;
+  padding: 0;
+}
+
+footer li {
+  margin-bottom: 10px;
+}
+
+footer a {
+  color: #fff;
+  text-decoration: none;
+}
+
+footer a:hover {
+  color: #ccc;
+}
+
+.col-logo {
+  margin-left: 40px;
+  margin-top: 40px;
+}
+
+.col-logo > p {
+  width: 300px;
+}
+
+.list-inline {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  display: grid;
+}
+
+#logofoot {
+  width: 100px;
+}
+
+#col-quick {
+  width: 200px;
+  margin-left: 70px;
+  margin-right: 0px;
+}
+
+#cred {
+  text-align: center;
+}
+
+#cred > p {
+  margin: 5px;
+}
+
+.icon-foot {
+  display: inline-flex;
+  margin-bottom: 10px;
+}
+
+.icon-foot > a {
+  width: 130px;
+}
+
+.icon-foot > img {
+  width: 50px;
+  margin-left: -14px;
+}
+
+.col-icon {
+  display: grid;
+  margin-left: 70px;
+  font-size: 10px;
+}
+.col-icon > h4{
+  font-size: 18px;
+  margin-top: 24px;
+}
+.col-icon > p{
+  font-size: 10px;
+}
+
+.div-foot {
+  display: flex;
+  margin: 0px;
+}
+
+iframe {
+  width: 500px;
+  height: 290px;
+  margin-top: 10px;
+}
+
+.mapouter{
+  position: relative;
+  text-align: right;
+}
+
+.gmap_canvas{
+  overflow: hidden;
+  background: none!important;
+  height: 560px;
+  width: 100vw;
+}
