--- a/orcamento.css
+++ b/orcamento.css
@@ -1,94 +1,405 @@
-header {
-	background: #BBBBBB;
-	padding: 20px 0;
+@import url("https://fonts.googleapis.com/css?family=Barlow:200,300,400,500,600,700,800,900&display=swap");
+@font-face {
+  font-family: 'titulo';
+  src: url('/assets/font/Oswald-VariableFont_wght.ttf');
 }
 
-.caixa {
-	position: relative;
-	width: 940px;
-	margin: 0 auto;
+@font-face {
+  font-family: 'podio';
+  src: url('/assets/font/BebasNeue-Regular.ttf');
+}
+
+body {
+  background-image: url(assets/imagens/back/back.jpg);
+  background-size: contain;
+  background-attachment: none;
+  height: 500px;
+  width: 99vw;
+  font-family: 'titulo';
+  font-weight: lighter;
+  font-style: normal;
+  text-decoration: none;
+  overflow-x: hidden;
+}
+
+body{
+  margin: 0px;
+  padding: 0px;
+}
+
+a {
+  text-decoration: none;
+  color: white;
 }
 
 nav {
-	position: absolute;
-	top: 110px;
-	right: 0;
+  background-color: #b5e418;
+  margin: -10px;
+  padding-top: 10px;
 }
 
-nav li {
-	display: inline;
-	margin: 0 0 0 15px;
+.bar {
+  text-decoration: none;
+  float: right;
+  font-size: 1.3em;
+  margin: 10px 30px 10px 10px;
+  color: black;
+  transition: all 0.1s ease;
 }
 
-nav a {
-	text-transform: uppercase;
-	color: #000000;
-	font-weight: bold;
-	font-size: 22px;
-	text-decoration: none;
+.bar:hover{
+  background-color: #8eb50c;
+  padding: 10px;
+  margin: 0px 20px 0px 0px;
+  transform: scale(1.1);
+  z-index: 1;
+}  
+@media (min-width: 901px) {
 }
 
-nav a:hover {
-	color: #C78C19;
-	text-decoration: underline;
+
+
+
+
+
+
+
+
+
+
+
+
+#burguer {
+  display: none;
 }
 
-.produtos {
-	width: 940px;
-	margin: 0 auto;
-	padding: 50px 0;
+
+
+
+
+
+
+
+
+
+@media (max-width: 980px) {
+  #logob {
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+    align-items: center;
+  }
+  #burguer {
+    display: block;
+    margin: 0;
+  }
+  #linha{
+    display: none;
+  }
+/*
+$bg-01: #364e68;
+$bg-02: #446d8c;
+$bg-03: #5788a0;
+$bg-04: #73a5b5;
+*/
+body {
+  margin: 0;
+  font-family: "Barlow", sans-serif;
+  -webkit-tap-highlight-color: transparent;
 }
 
-.produtos li {
-	display: inline-block;
-	text-align: center;
-	width: 30%;
-	vertical-align: top;
-	margin: 0 1.5%;
-	padding: 30px 20px;
-	box-sizing: border-box;
-	border: 2px solid #000000;
-	border-radius: 10px;
+ul {
+  margin: 0;
+  padding: 0;
+}
+ul li {
+  list-style: none;
 }
 
-.produtos li:hover {
-	border-color: #C78C19;
+a {
+  text-decoration: none;
+  color: white;
+}
+.menu {
+  display: none;
 }
 
-.produtos li:active {
-	border-color: #088C19;	
+.menubar {
+  width: 100%;
+  height: 60px;
+  padding: 0 20px;
+  position: absolute;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  box-sizing: border-box;
+  box-shadow: 0px 0px 20px -10px rgba(0, 0, 0, 0.3);
+  background-color: #b5e418;
+}
+.menubar .home {
+  font-size: 20px;
+  font-weight: 600;
+  color: #c05c7e;
+  transition: all 0.4s ease;
+}
+.menubar .home:hover {
+  opacity: 0.5;
+}
+.menubar .icons .icon-menu {
+  display: flex;
+  width: 30px;
+  height: 30px;
+  z-index: 2;
+  position: relative;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+.menubar .icons .icon-menu span {
+  background-color: #c05c7e;
+  width: 30px;
+  height: 3px;
+  position: absolute;
+  display: flex;
+  justify-content: flex-end;
+  transition: all 0.2s ease;
+  right: 0;
+  border-radius: 5px;
+}
+.menubar .icons .icon-menu span:before, .menubar .icons .icon-menu span:after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-color: #c05c7e;
+  border-radius: 5px;
+}
+.menubar .icons .icon-menu span:before {
+  transform: translateY(-10px);
+  transition: all 0.3s 0.1s ease;
+}
+.menubar .icons .icon-menu span:after {
+  transform: translateY(10px);
+  transition: all 0.3s 0.2s ease;
+}
+.menubar .icons .icon-menu.icon-closed span {
+  justify-content: center;
+  width: 0px;
+  right: initial;
+  opacity: 0.5;
+  transition: all 0.6s ease;
+}
+.menubar .icons .icon-menu.icon-closed span:before, .menubar .icons .icon-menu.icon-closed span:after {
+  width: 30px;
+  background-color: white;
+}
+.menubar .icons .icon-menu.icon-closed span:before {
+  transform: rotate(45deg);
+}
+.menubar .icons .icon-menu.icon-closed span:after {
+  transform: rotate(-45deg);
+}
+.menu.open {
+  display: flex;
+}
+.menu.open .menu-link {
+  justify-content: center;
+  align-items: center;
+}
+.menu.open .menu-link:nth-child(1) {
+  background-color: #794D8C;
+  animation-duration: 0.6s;
+}
+.menu.open .menu-link:nth-child(2) {
+  background-color: #c05c7e;
+  animation-duration: 0.8s;
+}
+.menu.open .menu-link:nth-child(3) {
+  background-color: #54BF8D;
+  animation-duration: 1s;
+}
+.menu.open .menu-link:nth-child(4) {
+  background-color: #F2E416;
+  animation-duration: 1.2s;
+}
+.menu.open .menu-link:nth-child(5) {
+  background-color: #F2CE1B;
+  animation-duration: 1.2s;
+}
+.menu.open .menu-link:nth-child(6) {
+  background-color: #D94423;
+  animation-duration: 1.2s;
+}
+.menu.open .menu-link:nth-child(7) {
+  background-color: #0099ff;
+  animation-duration: 1.2s;
+}
+.menu.open .menu-link .text-item {
+  text-transform: uppercase;
+  font-weight: 800;
+  font-size: 40px;
+  opacity: 0.5;
+  letter-spacing: 5px;
+  transition: all 0.4s 0.2s ease-in-out, letter-spacing 0.2s ease-in, opacity 0.2s ease-in;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation: text-in 0.6s ease;
+  position: absolute;
+}
+.menu.open .menu-link .text-item {
+    font-size: 30px;
+  }
+.menu.open .menu-link .text-item .icon {
+  margin-top: -20px;
+  position: absolute;
+  display: flex;
+  width: 30px;
+  height: 30px;
+  opacity: 0;
+  transform: translateY(0px);
+  transition: all 0.4s ease-in-out;
+  background-image: url("https://rafaelavlucas.github.io/assets/icons/white/icon-54.svg");
+}
+.menu.open .menu-link .text-item .icon {
+    opacity: 15;
+    transform: translateY(40px);
+  }
+
+.menubar .icons .icon-menu:hover span {
+  width: 30px;
+}
+.menubar .icons .icon-menu:hover span:before {
+  width: 25px;
+}
+.menubar .icons .icon-menu:hover span:after {
+  width: 20px;
 }
 
-.produtos li:hover h2 {
-	font-size: 34px;
+.menu.open .menu-link .submenu {
+  margin-top: 100px;
+  margin-left: 18px;
+}
+.menu.open .menu-link .submenu .sub-item {
+  display: none;
+  margin: 10px 0;
+  color: white;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-size: 20px;
+  font-weight: 600;
+  position: relative;
+  width: fit-content;
+  cursor: pointer;
+  padding: 5px 15px;
+}
+.menu.open .menu-link .submenu .sub-item {
+  font-size: 16px;
+  }
+.menu.open .menu-link .submenu .sub-item:after {
+  content: "";
+  height: 0%;
+  width: 3px;
+  background-color: white;
+  opacity: 0.3;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: height 0.4s 0.3s ease, width 0.4s ease;
+}
+.menu.open .menu-link .submenu .sub-item:hover:after {
+  width: 100%;
+  height: 100%;
+  transition: height 0.4s ease, width 0.4s 0.3s ease;
+}
+.menu.open .menu-link:hover .text-item {
+  font-size: 30px;
+  opacity: 1;
+  letter-spacing: 10px;
 }
 
-.produtos h2 {
-	font-size: 30px;
-	font-weight: bold;
+.menu.open .menu-link:hover.active {
+    height: 80vh;
+  }
+.menu.open .menu-link:hover.active .text-item {
+    height: 20%;
+    transform: translateY(-180%);
+  }
+.menu.open .menu-link:hover.active .submenu {
+  transform: translateY(0);
+  z-index: 1;
+  opacity: 1;
+}
+.menu.open .menu-link:hover.active .submenu {
+    height: 70%;
+  }
+.menu.open .menu-link:hover.active .submenu .sub-item {
+  display: flex;
+  animation: submenu 1s ease forwards;
+  z-index: 2;
+}
+@keyframes submenu {
+  0% {
+    transform: translatex(50px) rotate(5-deg);
+    opacity: 0;
+  }
+  50% {
+    transform: translatex(50px) rotate(-5deg);
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+    transform: translatex(0px) rotate(0deg);
+  }
+}
+.menu.open .menu-link:hover.active .submenu .sub-item:nth-child(1) {
+  animation-duration: 1s;
+}
+.menu.open .menu-link:hover.active .submenu .sub-item:nth-child(2) {
+  animation-duration: 1.2s;
+}
+.menu.open .menu-link:hover.active .submenu .sub-item:nth-child(3) {
+  animation-duration: 1.4s;
+}
+.menu.open .menu-link {
+    width: 100%;
+    height: 25%;
+    display: flex;
+    margin: 0 auto;
+    animation: menu-mobile 0.6s ease forwards;
+    transform: translatey(0%);
+    right: 0;
+  }
+  @keyframes menu-mobile {
+    0% {
+      transform: translateX(200%);
+    }
+    100% {
+      transform: translateX(0%);
+    }
+  }
+.menu.open .menu-link:hover {
+    width: 100%;
+  }
+.menu.open {
+    height: 100vh;
+    flex-direction: column;
+  }
+  
 }
 
-.produto-descricao {
-	font-size: 18px;
+
+#logo {
+  height: 50px;
+  margin-left: 50px;
 }
 
-.produto-preco {
-	font-size: 22px;
-	font-weight: bold;
-	margin-top: 10px;
-}
 
-footer {
-	text-align: center;
-	background: url("bg.jpg");
-	padding: 40px 0;
-}
 
-.copyright {
-	color: #FFFFFF;
-	font-size: 13px;
-	margin: 20px 0 0;
-}
+
+
+
 
 main {
 	width: 940px;
@@ -112,12 +423,9 @@ form label, form legend {
 	width: 50%;
 }
 
-.checkbox {
-	margin: 20px 0;
-}
-
 .enviar {
-	width:40%;
+  width: 80%;
+  height: 30%;
 	padding: 15px 0;
 	background: orange;
 	color: white;
@@ -127,6 +435,12 @@ form label, form legend {
 	border-radius: 5px;
 	transition: 1s all;
 	cursor: pointer;
+  margin: 0 auto;
+}
+
+#envio1 {
+  grid-area: envio; 
+  display: flex;
 }
 
 .enviar:hover {
@@ -135,7 +449,7 @@ form label, form legend {
 }
 
 table {
-	margin: 20px 0 40px;
+	margin: 40px 170px;
 }
 
 thead {
@@ -149,44 +463,274 @@ td, th {
 	padding: 8px 15px;
 }
 
-#a {
-	border: 10px solid black;
-	border-radius: 20px;
+#info-pes {
+	border: 1px solid black;
+	border-radius: 0.5rem;
+	margin-bottom: 40px;
+	margin-top: 40px;
+	background-color: white;
+  width: 70vw;
+}
+#info-pes h2 {
+	background-color: purple;
 }
 
-#nte > label {
-	margin-left: 50px;
+#nte {
+	display: grid;
+    grid-template-areas: 
+      'nomee nomee'
+      'tell maill';
+	  gap: 20px;
+    margin: 0px;
+	padding: 20px;
 }
+
+
 
 #nome {
+	grid-area: nomee;
+}
+
+#inome{
+	width: 90%;
+	display: flex;
+	margin: 0 auto;
+}
+
+#tel {
+	grid-area: tell;
+}
+
+#itel {
 	width: 85%;
+	margin-left: 6%;
+}
+
+#emailll {
+	grid-area: maill;
+}
+
+#email{
+	width: 85%;
+}
+
+#e-label {
+	left: 15px;
+}
+
+
+
+
+
+
+.input-group {
+	position: relative;
+   }
+   
+   .input {
+	border: solid 1.5px #9e9e9e;
+	border-radius: 1rem;
+	left: 15px;
+	background: none;
+	width: auto;
+	padding: 1rem;
+	font-size: 1rem;
+	color: rgba(0, 0, 0, 0.867);
+	transition: border 150ms cubic-bezier(0.4,0,0.2,1);
+   }
+   
+   .user-label {
+	position: absolute;
+	left: 45px;
+	color: rgba(0, 0, 0, 0.495);
+	pointer-events: none;
+	transform: translateY(-2.5rem);
+	transition: 150ms cubic-bezier(0.4,0,0.2,1);
+   }
+   
+   .input:focus, input:valid {
+	border: 1.5px solid #1a73e8;
+   }
+   .input:focus ~ label, input:valid ~ label {
+	transform: translateY(-280%) scale(0.8);
+	padding: 0 .2em;
+	background-color: white;
+	color: rgba(0, 0, 0, 0.585);
+	left: 1px;
+   }
+
+
+   #resto {
+	display: grid;
+    grid-template-areas: 
+    	'd-i h-i carda tema'
+    	'n-a n-c obs obs'
+      'envio envio obs obs'
+	  ;
+	  grid-template-columns: 23% 23% 23% 23%;
+	  grid-template-rows: 100px 100px 200px;
+	  gap: 20px;
+    margin: 0px;
+}
+
+#info-evento {
+	border: 1px solid black;
+	border-radius: 0.5rem;
+	background-color: white;
+  margin-bottom: 70px;
+  width: 70vw;
+}
+#info-evento h2 {
+	background-color: green;
+}
+	h2 {
+		margin: 0;
+		color: white;
+		padding: 10px;
+		border-radius: 0.5rem 0.5rem 0 0;
+	}
+
+#d-i {
+	grid-area: d-i;
+}
+#h-i {
+	grid-area: h-i;
+}
+#carda {
+	grid-area: carda;
+}
+#tema {
+	grid-area: tema;
+}
+#n-a {
+	grid-area: n-a;
+}
+#n-c {
+	grid-area: n-c;
+}
+#obs {
+	grid-area: obs;
+	width: 130%;
+	height: 150%;
+	margin-left: 40px;
+}
+#di-obs {
+  margin-top: -30px;
+}
+
+#tm {
+	border-radius: 0.5rem;
+	padding: 10px;
+	width: 80%;
+	height: 10px;
+	margin-left: 40px;
+}
+.tmm {
+	border-radius: 0.5rem;
+	width: 80%;
+	height: 30px;
 	margin-left: 40px;
 }
 
-#telefone {
-	width: 35%;
+#resto div p {
 	margin-left: 40px;
-	margin-right: 90px;
 }
 
-#tele {
-	margin-left: 50px;
+@media (max-width: 980px) {
+  #info-pes {
+    margin-top: 150px;
+  }
+  #resto {
+    justify-content: center;
+    align-items: center;
+    display: grid;
+      grid-template-areas: 
+        'd-i d-i h-i h-i carda carda'
+        'tema tema n-a n-a n-c n-c'
+        'obs obs obs obs obs obs'
+        'envio envio envio envio envio envio'
+      ;
+      grid-template-columns: 15% 15% 15% 15% 15% 15%;
+      grid-template-rows: 100px 100px auto 100px 100px 100px;
+      gap: 0px;
+      margin: 0px;
+      height: 30vh;
+  }
+  #tm {
+    border-radius: 0.5rem;
+    padding: 10px;
+    width: 60%;
+    height: 10px;
+    margin-left: 40px;
+  }
+  .tmm {
+    border-radius: 0.5rem;
+    width: 70%;
+    height: 30px;
+    margin-left: 40px;
+  }
+  
+  #resto div p {
+    margin-left: 40px;
+  }
+
+  #di-obs {
+    margin-top: 10px;
+  }
+  #obs {
+    grid-area: obs;
+    width: 430%;
+    height: 150%;
+    margin-left: 40px;
+  }
+  
 }
 
-#ema {
-	margin-left: 315px;
-}
+@media (min-width: 1px) and (max-width: 550px) {
+  #resto {
+    justify-content: center;
+    align-items: center;
+    display: grid;
+      grid-template-areas: 
+        'd-i d-i d-i h-i h-i h-i'
+        'tema tema tema carda carda carda'
+        'n-a n-a n-a n-c n-c n-c'
+        'obs obs obs obs obs obs'
+        'obs obs obs obs obs obs'
+        'envio envio envio envio envio envio'
+      ;
+      margin-left: 10%;
+  }
+  .enviar {
+    margin-top: 100px;
+  }
+  
+  #info-evento {
+    height: 100vh;
+  }
+  
+  #tm {
+    border-radius: 0.5rem;
+    padding: 10px;
+    height: 10px;
+    margin-left: 0px;
+  }
+  .tmm {
+    border-radius: 0.5rem;
+    height: 30px;
+    margin-left: 0px;
+  }
+  
+  #resto div p {
+    margin-left: 0px;
+  }
 
-#email {
-	width: 35%;
-}
+  #di-obs {
+    margin-top: 150px;
+  }
+  #obs {
+    width: 450%;
+    margin-left: 10px;
+  }
 
-.t-e {
-	display: flex;
-}
-
-.label-te {
-	display: flex;
-}
-
-
+ }
